# MVP_TYC

./: API_DOCUMENTATION.md  README.md  TECHNICAL_DOCUMENTATION.md  prompts.md
career-guidance-backend/: .dockerignore  Dockerfile  README.md  alembic.ini  chat_testing_guide.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
career-guidance-backend/alembic/: env.py  script.py.mako
career-guidance-backend/app/: t.json
career-guidance-backend/app/api/: __init__.py  dependencies.py  errors.py
career-guidance-backend/app/core/: __init__.py  config.py  security.py  settings.py
career-guidance-backend/app/data/: questions.py  user_question.py
career-guidance-backend/app/db/: __init__.py  connections.py  mongo.py  mysql.py  session.py
career-guidance-backend/app/llm/: __init__.py  groq_agent.py  knowledge_base.py  prompts.py  rag_system.py
career-guidance-backend/app/models/: __init__.py  profile.py  user.py
career-guidance-backend/app/schemas/: __init__.py  auth.py  chat.py  guidance.py  profile.py  question.py  questionnaire.py  report.py  user.py
career-guidance-backend/app/services/: __init__.py  admin_service.py  auth_service.py  chat_service.py  guidance_service.py  profile_analysis_service.py  profile_service.py  question_service.py  report_service.py
career-guidance-backend/knowledge_base/01_education_system_and_streams/: educational_boards_india.txt  entrance_exams_overview.txt  indian_education_structure_10_plus_2.txt  stream_selection_guidance_10th.txt
career-guidance-backend/knowledge_base/career_paths/: doc_0.txt  doc_1.txt  (+2 more)
(+77 files in other folders)
